maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:50: error: TOP  is already defined as variable TOP
val TOP, BOTTOM, RIGHT, LEFT = Value
    ^ShortestPathMaze:50: error: BOTTOM  is already defined as variable BOTTOM
val TOP, BOTTOM, RIGHT, LEFT = Value
         ^ShortestPathMaze:50: error: RIGHT  is already defined as variable RIGHT
val TOP, BOTTOM, RIGHT, LEFT = Value
                 ^ShortestPathMaze:50: error: LEFT  is already defined as variable LEFT
val TOP, BOTTOM, RIGHT, LEFT = Value
                        ^ShortestPathMaze:49: error: not found: type Value
type NeighborPos = Value
                   ^ShortestPathMaze:50: error: not found: value Value
val TOP, BOTTOM, RIGHT, LEFT = Value
                               ^ShortestPathMaze:50: error: not found: value Value
val TOP, BOTTOM, RIGHT, LEFT = Value
                               ^ShortestPathMaze:50: error: not found: value Value
val TOP, BOTTOM, RIGHT, LEFT = Value
                               ^ShortestPathMaze:50: error: not found: value Value
val TOP, BOTTOM, RIGHT, LEFT = Value
                               ^ShortestPathMaze:62: error: not found: value hasBottomWall
      if (hasBottomWall(x, y)) return min;
          ^ShortestPathMaze:66: error: not found: value hasRightWall
      if (hasRightWall(x, y)) return min;
          ^